       be used instead
 * Language and i18n:
   * new translations: Icelandic
   * updated translations: British English, Catalan, Chinese (Simplified),
     Czech, German, Finnish, Hebrew, Italian, Russian, Slovak, Turkish
   * Updated CJK character range
   * Fixed word wrapping in CJK languages (patch #1140 from sylecn)
 * User interface:
   * Fixed bug #13257: Attack dialog always uses the active name of a weapon
     special
 * WML Engine:
   * Added [show_objectives] tag (part of bug #13042)
   * Made moveto events set $x2,$y2 to the source hex. (bug #13140)
   * [switch] and [case]/[else] can be used to wrap story [part]s in [story]
     now (bug #13170)
   * Added a "preload" WML event type.
   * Added support for Lua scripts in WML event actions ([lua] tag)
 * Savegames
   * Providing a new simpler interface for dealing with savegames
 * Miscellaneous and bugfixes:
   * Fixed compilation with -D_GLIBCXX_PARALLEL
   * Fixed handling of floating-point WML constants on localized Windows
     (impacts "submerge" animations and AI settings)

Version 1.6a:
 * User interface:
   * Remove a no longer valid assert (bug #13217)
   * Make sure the dialog always uses the full map area width
 * Multiplayer and AI:
   * Fixed bug #13222: Do not use the FormulaAI by default since it could lead
     to the AI doing nothing
   * Fixed bug #13218: infinite loop in the AI if it persistently tries to move
     unit to occupied square
   * Moved FormulaAI related debug output into the info log level

Version 1.6:
 * Campaigns:
   * Under the Burning Suns:
     * All portraits now have a transparent background (bug #13135)
 * Graphics:
   * New or updated unit graphics for the Mermaid Priestess and Enchantress
     unit lines
 * Language and i18n:
   * updated translations: Finnish, French, German, Lithuanian, Polish,
     Portuguese (Brazil), Russian, Slovak, Spanish
 * User interface:
   * Grey game titles out when we're missing the era